--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
+DATABASE_URL="mongodb+srv://pakkapong:22072549gg@pakkapong.baya3.mongodb.net/cars"
 PORT=4000
-DATABASE_URL="mysql://root@localhost:3306/cars"
