--- a/package.json
+++ b/package.json
@@ -11,16 +11,18 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^6.0.1",
+    "@prisma/client": "^6.4.1",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.13.1",
+    "mongoose": "^8.11.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.5",
-    "prisma": "^6.0.1"
+    "prisma": "^6.4.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
